--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@angular/http": "^6.1.0",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/platform-server": "^7.0.1",
+    "@angular/pwa": "^0.10.3",
     "@angular/router": "^6.1.0",
+    "@angular/service-worker": "^7.0.1",
     "core-js": "^2.5.4",
+    "ng-pwa-tools": "0.0.15",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
