--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@angular/pwa": "^0.10.3",
     "@angular/router": "^6.1.0",
     "@angular/service-worker": "^7.0.1",
+    "angularfire2": "^5.1.0",
     "core-js": "^2.5.4",
+    "faker": "^4.1.0",
+    "firebase": "^5.5.6",
     "ng-pwa-tools": "0.0.15",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
